# FTLPU-CMODEL

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md
LPU_VXM/: VXM.hpp  VXM_test_result.txt  VXM定义.docx  decoder.hpp  half.hpp  pipeline.hpp  vxm.cpp
docs/: FTLPU.drawio  architecture.md  architecture.zh-CN.md  attention_pipeline_optimization.md
examples/: array_trace_demo.cpp  gemm_320_trace_demo.cpp  mem_mxm_trace_demo.cpp  mxm_control_trace_demo.cpp  northbound_pipeline_demo.cpp  vector_roundtrip_demo.cpp
examples/c2c/: c2c_stream_demo.cpp
examples/core/: northbound_pipeline_demo.cpp
examples/icu/: icu_mem_demo.cpp
examples/mem/: tile_array_trace_demo.cpp  vector_roundtrip_demo.cpp
examples/mxm/: control_trace_demo.cpp  gemm_320_trace_demo.cpp  mem_mxm_trace_demo.cpp  mem_sr_mxm_demo.cpp
examples/sxm/: chain_demo.cpp
examples/system/: stream_topology_api_demo.cpp
examples/vxm/: lane_trace_demo.cpp
include/ftlpu/: array_model.hpp  hardware_params.hpp  instruction_pipeline.hpp  mem_slice.hpp  mxm_array.hpp  mxm_control_slice.hpp  mxm_gemm.hpp  mxm_supercell.hpp  topology.hpp  vxm_alu.hpp  vxm_lane.hpp
include/ftlpu/c2c/: README.md  c2c.hpp  instruction.hpp  link.hpp  slice.hpp  types.hpp
include/ftlpu/core/: fp16.hpp  hardware_params.hpp  hemisphere.hpp  instruction_codec.hpp  instruction_packet.hpp  instruction_pipeline.hpp  stream.hpp  stream_fabric.hpp  stream_port.hpp  topology.hpp
include/ftlpu/dma/: descriptor.hpp  dma.hpp  engine.hpp  global_memory.hpp  host_memory.hpp
include/ftlpu/icu/: fetch.hpp  icu.hpp  instruction.hpp
include/ftlpu/mem/: address.hpp  mem_array.hpp  slice.hpp  sram.hpp  tile_array.hpp
include/ftlpu/mxm/: array.hpp  control_slice.hpp  gemm_engine.hpp  mxm.hpp  performance_monitor.hpp  supercell.hpp
include/ftlpu/program/: packet_encoder.hpp  preamble.hpp  program.hpp  program_image.hpp  sram_layout.hpp
include/ftlpu/sxm/: distributor.hpp  instruction.hpp  permute.hpp  shift.hpp  slice.hpp  transpose.hpp  unit_group.hpp
include/ftlpu/system/: icu.hpp  stream_topology.hpp  tsp_slice_system.hpp
include/ftlpu/vxm/: alu.hpp  data_format.hpp  lane.hpp  slice.hpp  special_alu.hpp  superlane.hpp
scripts/: render_schedule_trace.py  render_swiglu_schedule_trace.py
tests/: array_model_test.cpp  gemm_320_test.cpp  instruction_pipeline_test.cpp  mem_mxm_integration_test.cpp  mem_slice_test.cpp  mxm_array_test.cpp  mxm_control_slice_test.cpp  mxm_supercell_test.cpp  stream_register_test.cpp  topology_test.cpp  vector_roundtrip_test.cpp  vxm_alu_test.cpp  vxm_lane_test.cpp
tests/c2c/: c2c_test.cpp
tests/core/: instruction_codec_test.cpp  instruction_pipeline_test.cpp  stream_register_test.cpp  topology_test.cpp
tests/dma/: dma_test.cpp
tests/icu/: fetch_test.cpp  icu_test.cpp
tests/integration/: attention_projection_test.cpp  dual_hemisphere_w8a16_swiglu_test.cpp  icu_program_ifetch_test.cpp  icu_stream_scheduled_test.cpp  mem_dual_mxm_swiglu_test.cpp  mem_mxm_test.cpp  mem_vxm_test.cpp  rmsnorm_test.cpp  single_head_attention_test.cpp  smollm2_attention_test.cpp  smollm2_kv_projection_test.cpp  sxm_mem_transpose_test.cpp  sxm_softmax_v_test.cpp  vxm_alu_program.hpp  w8a16_projection_test.cpp  w8a16_swiglu_test.cpp
tests/mem/: accumulator_test.cpp  address_test.cpp  instruction_vector_tag_test.cpp  mem_array_separated_test.cpp  slice_test.cpp  sram_test.cpp  tile_array_test.cpp  vector_roundtrip_test.cpp
tests/mxm/: array_test.cpp  control_slice_test.cpp  gemm_320_test.cpp  stream_interface_test.cpp  supercell_test.cpp  systolic_accumulator_test.cpp
tests/stream/: stream_fabric_test.cpp  stream_port_test.cpp
tests/sxm/: attention_transpose_test.cpp  sxm_test.cpp
tests/system/: full_chip_topology_test.cpp  stream_topology_test.cpp
tests/vxm/: alu_test.cpp  lane_operator_workloads.hpp  lane_test.cpp  lane_test_driver.hpp  operator_error_metrics.hpp  slice_test.cpp  special_alu_test.cpp  superlane_operator_workloads.hpp  superlane_test.cpp
